# Convertir_md_html

./: Cargo.toml  README.md  README_en.md  config.json  config_dark.json  ejecutar1.py  pyproject.toml  test.py
src/: lib.rs
tests/: Consideraciones.md  config.json  salida.html
tests/Herramientas_PDF_TO_MARKDOWN/: Analisis_PDFs.ipynb
