[package]
name = "rust_html_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.9"
rfd = "0.14"

[lib]
name = "rust_html_gen"
crate-type = ["cdylib"]
