[package]
name = "rust_html_gen"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_html_gen"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.9"
rfd = "0.14"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
notify = "5.1"

