[project]
name = "rust_html_gen"
version = "0.1.0"
description = "Generador HTML desde Markdown con Rust"
authors = [{ name = "Angel A. Urbina", email = "angel.urbina.sanchez@gmail.com" }]
readme = "README.md"
requires-python = ">=3.7"

[build-system]
requires = ["maturin>=0.13"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
